2001-03-28 00:00 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * contrib/rdd_ads/ads1.c
      + added ADSSetRelKeyPos for quick scrollbar guesstimates

   * contrib/rdd_ads/adsfunc.c
      * moved ADSGetRelKeyPos to ads1.c
      + added AdsIsExprValid() wrapper to test if an expression can be
         evaluated by the server

   + contrib/rdd_ads/adsmgmnt.c
      * minor edits

2001-03-27 20:05 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    Changes from Marek Paliwoda. Thanks Marek :)

    *doc/en/gtslang.txt
    *source/rtl/gtsln/gtsln.c
    *source/rtl/gtsln/kbsln.c
    *source/rtl/gtsln/keytrans.c
     - added support for displaying and entering national characters (see

       gtslang.txt for details)

     - improved keyboard support for linux text console. Almost all
 ALT/CTRL+

       SpecialKeys should work well. Note that You have to work using true

       /dev/tty[1-12] device. This means You can't benefit from it when You

       run Harbour programs from within Midnight Commander for example,

       because
 MC uses pseudoterminals.

     - prepared for other Unix text consoles (SCO) (not tested)

     - removed support for DOS. It was totally not needed due its
 limitations



2001-03-27 05:18 GMT-3 Horacio Roldan <horacioroldan@usa.net>
   * harbour/source/rdd/dbcmd.c
     * fixed unallocated memory block in dbcreate

2001-02-26 19:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      +Added support yo build librarys
      %optimized the check if the file is newer then the object file.
      +added Trap for errors return from command
   *source/vm/estack.c
      *added define when source is compiled with -DHB_INCLUDE_WINEXCHANDLER

2001-03-24 23:07 GMT-3 Horacio Roldan <horacioroldan@usa.net>
   * harbour/source/rdd/dbf1.c
     * fixed bug handling drive letter in opening memo file

2001-03-24 02:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     * Minor fix for VC++