@@ -1,3 +1,11 @@
+2001-03-30 13:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * source/rdd/dbfntx/dbfntx1.c
+   * include/hbrddntx.h
+     + started ntxOrderListRebuild()
+     + added ntxPack() - will work properly after ntxOrderListRebuild() has
+       finished
+     + added ntxZap()
+
 2001-03-28 00:00 UTC-0800 Brian Hays <bhays@abacuslaw.com>
    * contrib/rdd_ads/ads1.c
       + added ADSSetRelKeyPos for quick scrollbar guesstimates
